--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
+# LaTeX
+**/*.aux
+**/*.bbl
+**/*.bcf
+**/*.blg
+**/*.fdb_latexmk
+**/*.fls
+**/*.idx
+**/*.ilg
+**/*.ind
+**/*.loe
+**/*.log
+**/*.nav
+**/*.out
+**/*.run.xml
+**/*.snm
+**/*.synctex.gz
+**/*.synctex(busy)
+**/*.toc
+
 # macOS
 .DS_Store
 
