--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,39 @@
     "-l=%WORKSPACE_FOLDER%/latexindent.yaml",
     "-m"
   ],
+  "latex-workshop.latex.tools": [
+    {
+      "name": "latexmk",
+      "command": "latexmk",
+      "args": [
+        "-synctex=1",
+        "-interaction=nonstopmode",
+        "-file-line-error",
+        "-pdf",
+        "-outdir=%OUTDIR%",
+        "%DOC%"
+      ],
+      "env": {}
+    },
+    {
+      "name": "pdflatex",
+      "command": "pdflatex",
+      "args": [
+        "-synctex=1",
+        "-interaction=nonstopmode",
+        "--shell-escape",
+        "-file-line-error",
+        "%DOC%"
+      ],
+      "env": {}
+    },
+    {
+      "name": "bibtex",
+      "command": "bibtex",
+      "args": ["%DOCFILE%"],
+      "env": {}
+    }
+  ],
   "latex-workshop.texcount.args": ["-merge %DOC%"],
   "python.analysis.typeCheckingMode": "basic",
   "python.defaultInterpreterPath": "${env:HOME}/miniconda3/envs/graded",
