add ltex spellcheck

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
     "ms-python.isort",
     "ms-python.pylint",
     "ms-python.python",
-    "ms-python.vscode-pylance"
+    "ms-python.vscode-pylance",
+    "valentjn.vscode-ltex"
   ]
 }
