--- a/latexindent.yaml
+++ b/latexindent.yaml
@@ -49,5 +49,7 @@ fineTuning:
           \),                             # ),
           |                               #
           \)\.                            # ).
+          |                               #
+          \\footnote                      # \footnote
         )                                 #
       )                                   #
