--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,25 +1,41 @@
 {
-  "version": "2.0.0",
   "tasks": [
     {
-      "type": "shell",
-      "command": "${command:python.interpreterPath}",
       "args": ["-m", "src.cosimlex", "-f"],
-      "options": { "cwd": "${workspaceFolder}" },
-      "label": "convert",
+      "command": "${command:python.interpreterPath}",
       "group": {
         "kind": "none"
-      }
+      },
+      "label": "convert",
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "type": "shell"
     },
     {
-      "type": "shell",
-      "command": "${command:python.interpreterPath}",
       "args": ["-m", "src.subtask1"],
-      "options": { "cwd": "${workspaceFolder}" },
-      "label": "subtask1",
+      "command": "${command:python.interpreterPath}",
       "group": {
         "kind": "none"
-      }
+      },
+      "label": "subtask1",
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "type": "shell"
+    },
+    {
+      "args": ["-m", "src.cv"],
+      "command": "${command:python.interpreterPath}",
+      "group": {
+        "kind": "none"
+      },
+      "label": "subtask1 cv",
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "type": "shell"
     }
-  ]
+  ],
+  "version": "2.0.0"
 }
