--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -35,6 +35,18 @@
         "cwd": "${workspaceFolder}"
       },
       "type": "shell"
+    },
+    {
+      "args": ["-m", "src.utils"],
+      "command": "${command:python.interpreterPath}",
+      "group": {
+        "kind": "none"
+      },
+      "label": "subtask1 utils",
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "type": "shell"
     }
   ],
   "version": "2.0.0"
