hide latex files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,30 @@
   "black-formatter.args": ["--line-length", "88"],
   "files.exclude": {
     "**/.pytest_cache": true,
-    "**/__pycache__": true
+    "**/__pycache__": true,
+    "**/*.aux": true,
+    "**/*.auxlock": true,
+    "**/*-blx.bib": true,
+    "**/*.bbl": true,
+    "**/*.bcf": true,
+    "**/*.blg": true,
+    "**/*.dep": true,
+    "**/*.dpth": true,
+    "**/*.md5": true,
+    "**/*.fdb_latexmk": true,
+    "**/*.fls": true,
+    "**/*.idx": true,
+    "**/*.ilg": true,
+    "**/*.ind": true,
+    "**/*.loe": true,
+    "**/*.log": false,
+    "**/*.nav": true,
+    "**/*.out": true,
+    "**/*.run.xml": true,
+    "**/*.snm": true,
+    "**/*.synctex.gz": true,
+    "**/*.synctex(busy)": true,
+    "**/*.toc": true
   },
   "isort.args": ["--profile", "black"],
   "latex-workshop.latex.recipe.default": "lastUsed",
