--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,6 +102,7 @@
     "\\pgfplotstableset{}": "ignore",
     "\\pgfplotstabletypeset[]{}": "ignore",
     "\\pgfplotstabletypeset[]": "ignore",
+    "\\pgfplotstabletypeset{}": "ignore",
     "\\ref{}": "ignore",
     "\\settowidth{}": "ignore"
   },
